fix width of sidebar on mobiles

--- a/components/Templates/DashboardTemplate/styles.module.scss
+++ b/components/Templates/DashboardTemplate/styles.module.scss
@@ -7,7 +7,11 @@
     transition: all 0.2s ease-in-out;
 
     &--active {
-      width: 250px;
+      width: 0px;
+
+      @media (min-width: 1200px) {
+        width: 250px;
+      }
     }
   }
 
